      by magic number for all operations, including float32 
      and float64.

- APIC (Zwane Mwaikambo)
  - APIC arbitration
  - Processor priority
  - Various interrupt delivery fixes
  - Focus processor checking
  - ExtINT delivery

- Disassembler
  - fixed MOV opcode 0x88, had exchanged the operands (h.johansson)
  - fixed MOV opcode 0xA3, had wrong operand size (h.johansson)

- I/O devices
  - general
    - handle cpu reset through port 0x92
    - new memory handler API for PCI i/o and memory handling (Frank Cornelis)
  - speaker emulation added (David N. Welton)
  - pci
    - PCI slot configuration added for 5 slots
    - PCI irq routing, irq sharing and level sensitive irq mode implemented
    - ne2k device appears as a Realtec 8029 NIC if connected to a PCI slot
    - PCI IDE controller dummy device added
    - PCI host device mapping for Linux (Frank Cornelis)
    - PCI Pseudo-NIC emulation (Michael Brown)
  - serial
    - multiple serial port support added (4 ports now available)
    - partial raw serial support on win32 (transmit data)
    - serial port i/o mode option added (modes: null, file, term, raw)
  - parallel
    - multiple parallel port support added (2 ports now available)
  - vga
    - VBE 8 bit DAC support added
    - VBE memory now registered using DEV_register_memory_handlers()
    - CL-GD 54xx SVGA emulation added (Makato Suzuki)
  - floppy
    - raw floppy access now works on Win9x host (Ben Lunt)
  - sb16
    - MacOSX sound support (Brian Huffman)
  - networking modules
    - new: 'eth_vnet' simulates ARP, DHCP and ICMP-echo (m_suzu)
    - new: 'eth_vde' for Virtual Distributed Ethernet (Renzo Davoli)

- System BIOS
  - turn floppy motor off 2 seconds after last read/write/recalibrate command
    (Ben Lunt)
  - int13_cdrom / 32 bit register update fixes for FreeBSD cdrom boot
    (Fabrice Bellard)
  - APM and system shutdown support (Fabrice Bellard)
  - checksum calculation for expansion ROMs